# alhafiz-tailor-management-app

./: components.json  index.html  package-lock.json  package.json  tsconfig.app.json  vite.config.ts
src/: App.tsx  global.css  gobal.css  main.tsx
src-tauri/: Cargo.toml
src-tauri/capabilities/: default.json
src-tauri/migrations/: 0001_initial.sql
src-tauri/src/: commands.rs  db.rs  error.rs  lib.rs
src/components/: MainLayout.tsx
src/components/common/: Layout.tsx  MainLayout.tsx
src/components/ui/: badge.tsx  button.tsx  calendar.tsx  customerAvatar.tsx  date-picker.tsx  dialog.tsx  editable-combobox.tsx  form.tsx  pagination.tsx  popover.tsx  tabs.tsx  textarea.tsx
src/hooks/: useLanguage.ts
src/i18n/: index.ts
src/i18n/locales/: en.json  ps.json
src/lib/: api.ts
src/pages/: Billing.tsx  Customers.tsx  Dashboard.tsx  Inventory.tsx  Measurements.tsx  NewCustomer.tsx  Reports.tsx  Settings.tsx
src/pages/Customers/: index.tsx
src/pages/Dashboard/: index.tsx
src/shared/: types.ts
